fix horizontal scroll desktop

--- a/pages/board/index.module.scss
+++ b/pages/board/index.module.scss
@@ -7,7 +7,7 @@
     color: $color-white;
     align-items: center;
     text-align: center;
-    width: 100vw;
+    width: 100%;
 
     &__container {
         min-height: 100vh;
